--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "vue-router": "^4.2.4"
     }
 }
