--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^4.2.3",
-        "axios": "^1.1.2",
+        "autoprefixer": "^10.4.14",
         "laravel-vite-plugin": "^0.7.5",
+        "postcss": "^8.4.27",
+        "tailwindcss": "^3.3.3",
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "axios": "^1.1.2",
         "vue-router": "^4.2.4"
     }
 }
